--- a/app/app.html
+++ b/app/app.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./app.css" />
 </head>
 <body>
     <div id="root">
