--- a/app/app.html
+++ b/app/app.html
@@ -2,13 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./app.css" />
 </head>
 <body>
     <div id="root">
     </div>
-    <script type="text/javascript" src="../node_modules/babel-standalone/babel.min.js"></script>
-    <script type="text/jsx" src="./app.jsx" data-presets="react" data-plugins="transform-es2015-modules-commonjs"></script>
+    <script type="text/javascript" src="../app/bundle.js"></script>
 </body>
 </html>
